# cpp-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/plans/: 2026-03-20-cpp-template-design.md  2026-03-20-cpp-template-implementation.md  2026-03-20-readme-publish-design.md  2026-03-20-readme-publish-implementation.md
src/: hello.cpp  main.cpp
